--- a/styles/GameQuestion.module.css
+++ b/styles/GameQuestion.module.css
@@ -5,5 +5,14 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	align-items: stretch;
+}
+
+#question {
+	padding: 3rem;
+	text-align: center;
+}
+
+#options {
+	flex-grow: 1;
 }
