--- a/styles/GameQuestion.module.css
+++ b/styles/GameQuestion.module.css
@@ -1,6 +1,7 @@
 #container {
 	width: 100%;
 	height: 100%;
+	max-height: 100%;
 
 	display: flex;
 	flex-direction: column;
@@ -15,4 +16,18 @@
 
 #options {
 	flex-grow: 1;
+}
+.optionButton {
+	height: 100%;
+	width: 100%;
+}
+.optionWapper {
+	height: 100%;
+	width: 100%;
+	padding: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	user-select: none;
+	/* cursor: pointer; */
 }
