waiting screen done! support hundreds of players with screen overflow

--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -1,5 +1,7 @@
 #gameContainer {
 	height: 100vh;
+	max-height: 100vh;
+	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
