--- a/styles/GameQuestion.module.css
+++ b/styles/GameQuestion.module.css
@@ -21,6 +21,12 @@
 	margin-top: 20px;
 }
 
+#gameButton{
+	background: purple;
+	margin-top: 20px;
+	color: white;
+}
+
 
 #username {
 	text-align: center;
