last leg changes/fixes

--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -1,6 +1,5 @@
 #listContainer {
-	min-height: 100vh;
-	padding: 0 0.5rem;
+	margin-top: -80px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
