--- a/styles/Results.module.css
+++ b/styles/Results.module.css
@@ -8,6 +8,15 @@
 	align-items: stretch;
 }
 
+
+#nameContainer {
+	display: flex;
+	margin-bottom: 10px;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+}
+
 #question {
 	padding: 3rem;
 	text-align: center;
@@ -23,6 +32,7 @@
 
 #groupTitle {
 	padding: 10px;
+	width: 200px;
 	font-size: 13px;
 }
 
