--- a/styles/admin/Question.module.css
+++ b/styles/admin/Question.module.css
@@ -1,3 +1,19 @@
+#container {
+	width: 100%;
+	height: 100%;
+	max-height: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: stretch;
+}
+
+#question {
+	padding: 3rem;
+	text-align: center;
+}
+
 #adminMoveOn {
 	margin-top: 20px;
 }
