--- a/styles/GameRow.module.css
+++ b/styles/GameRow.module.css
@@ -49,12 +49,8 @@
 }
 
 #username:hover {
-	text-decoration: line-through
+	text-decoration: line-through;
 }
-
-
-
-
 
 #viewButton {
 	text-align: center;
@@ -63,6 +59,6 @@
 	color: white;
 }
 
-#enterButton{
+#enterButton {
 	margin-right: 10px;
 }
