--- a/styles/GameEnd.module.css
+++ b/styles/GameEnd.module.css
@@ -1,8 +1,7 @@
 #container {
 	width: 100%;
 	height: 100%;
-	max-height: 100%;
-	overflow: hidden;
+	overflow-x: hidden;
 
 	display: flex;
 	flex-direction: column;
@@ -19,6 +18,8 @@
 	display: flex;
 	flex-direction: column;
 	margin-bottom: 1rem;
+	justify-content: center;
+	align-items: center;
 }
 
 #details {
@@ -30,6 +31,43 @@
 	align-items: center;
 	align-content: flex-start;
 	flex-wrap: wrap;
-	overflow-y: scroll;
 	overflow-x: hidden;
+}
+
+#peopleContainer {
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	flex-wrap: nowrap;
+	width: fit-content;
+	margin-left: 1.5rem;
+	margin-top: 2rem;
+	min-width: 50%;
+}
+
+#personWrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: nowrap;
+
+	flex-basis: 0;
+	flex-grow: 1;
+	margin-right: 1.5rem;
+}
+
+#personAvatar {
+	margin-bottom: 0.5rem;
+	width: 100%;
+	height: auto;
+}
+
+#characteristics {
+	margin-top: 2rem;
+	margin-bottom: 1rem;
+}
+
+#social {
+	font-size: 0.8rem;
 }
