--- a/styles/GameEnd.module.css
+++ b/styles/GameEnd.module.css
@@ -12,12 +12,14 @@
 #header {
 	padding: 2rem;
 	padding-bottom: 0;
+	padding-top: 10rem;
+
+	border: 1px solid blue;
 	text-align: center;
 }
 #matchContainer {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 1rem;
 	justify-content: center;
 	align-items: center;
 }
@@ -64,7 +66,7 @@
 }
 
 #characteristics {
-	margin-top: 2rem;
+	margin-top: 3rem;
 	margin-bottom: 1rem;
 }
 
