--- a/styles/GameEnd.module.css
+++ b/styles/GameEnd.module.css
@@ -1,7 +1,7 @@
 #container {
 	width: 100%;
 	height: 100%;
-	overflow-x: hidden;
+	overflow: auto;
 
 	display: flex;
 	flex-direction: column;
@@ -10,9 +10,7 @@
 }
 
 #header {
-	padding: 2rem;
-	padding-bottom: 0;
-	padding-top: 10rem;
+	margin-top: 15%;
 
 	text-align: center;
 }
@@ -38,10 +36,10 @@
 #peopleContainer {
 	display: flex;
 	flex-direction: row;
+	width: 100%;
 	align-items: flex-start;
 	justify-content: center;
 	flex-wrap: nowrap;
-	padding-left: 1.5rem;
 
 	justify-content: space-evenly;
 	margin-top: 2rem;
@@ -51,12 +49,12 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	
+    width: 33%;
+	height: 100%;
 	align-items: center;
 	flex-wrap: nowrap;
 
-	flex-basis: 0;
-	flex-grow: 1;
-	margin-right: 1.5rem;
 }
 
 #personAvatar {
@@ -72,4 +70,9 @@
 
 #social {
 	font-size: 0.8rem;
+}
+
+#name{
+	font-size: 15px;		
+	white-space: nowrap;	
 }
