display similarly matched players

--- a/styles/GameEnd.module.css
+++ b/styles/GameEnd.module.css
@@ -25,7 +25,8 @@
 
 #details {
 	flex-grow: 1;
-	padding: 2rem;
+	padding-top: 1rem;
+	padding-bottom: 4rem;
 
 	display: flex;
 	justify-content: flex-start;
