--- a/styles/GameEnd.module.css
+++ b/styles/GameEnd.module.css
@@ -80,3 +80,28 @@
 	font-size: 18px;
 	white-space: nowrap;
 }
+
+.personCol {
+	max-width: 100%;
+}
+
+@media (max-width: 500px) {
+	#peopleContainer {
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	#personCol {
+		margin-bottom: 1.5rem;
+		text-align: center;
+	}
+
+	#characteristics {
+		margin-top: 3rem;
+	}
+
+	#personWrapper {
+		width: 60%;
+	}
+}
